--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -1,4 +1,4 @@
-id: medcom.ehmi.dk.edstestscripts
+id: dk.ehmi.eds.testscripts
 canonical: http://medcomehmi.dk/ig/edstestscripts
 name: EDSTestScripts
 title: EDS Test Scripts
