--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,3 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-medcom.ehmi.dk.edstestscripts.json
+ig = fsh-generated/resources/ImplementationGuide-dk.ehmi.eds.testscripts.json
 template = https://github.com/hl7dk/medcom-ig-template 
